--- a/index.html
+++ b/index.html
@@ -10,17 +10,26 @@
   <body>
     <header>
 
-
     </header>
 
     <main>
 
+      <div class="contenitore1">
+
+      </div>
+
+      <div class="contenitore2">
+
+      </div>
+
+      <div class="contenitoredoppio">
+        
+      </div>
 
 
     </main>
 
     <footer>
-
 
 
     </footer>
