settaggio main con aside e section

--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 
     <main>
 
-      <div class="contenitore1">
+      <aside class="contenitore1">
 
-      </div>
+      </aside>
 
-      <div class="contenitore2">
+      <aside class="contenitore2">
 
-      </div>
+      </aside>
 
-      <div class="contenitoredoppio">
-        
-      </div>
+      <aside class="contenitoredoppio">
+
+      </aside>
 
 
     </main>
