--- a/index.html
+++ b/index.html
@@ -18,14 +18,17 @@
 
       </aside>
 
-      <aside class="contenitore2">
+      <section class="contenitore2">
 
-      </aside>
+      </section>
 
-      <aside class="contenitoredoppio">
+      <section class="contenitoredoppio">
 
-      </aside>
+      </section>
 
+      <div class="clearfix">
+
+      </div>
 
     </main>
 
