--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
 
       <section class="contenitoredoppio">
 
+        <div class="piccoli">
+
+        </div>
+
+        <div class="piccoli">
+
+        </div>
+
       </section>
 
       <div class="clearfix">
